--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
-  "name": "nodejs-sqlite-project",
+  "name": "farmaproject",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1",
-    "multer": "^1.4.5-lts.1",
-    "sqlite3": "^5.0.0"
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
+    "expo": "~51.0.28",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-picker/picker": "2.7.5",
+    "lottie-react-native": "6.7.0",
+    "expo-image-picker": "~15.0.7",
+    "react-native-maps": "1.14.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7"
-  }
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.45",
+    "typescript": "^5.1.3"
+  },
+  "private": true
 }
