--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-camera": "~15.0.16",
-    "expo-image-picker": "~15.0.7",
-    "expo-status-bar": "~1.12.1",
-    "lottie-react-native": "6.7.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-maps": "1.14.0",
+    "expo": "^52.0.25",
+    "expo-camera": "~16.0.11",
+    "expo-image-picker": "~16.0.4",
+    "expo-status-bar": "~2.0.1",
+    "lottie-react-native": "7.1.0",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.12.5",
     "react-native-picker-select": "^9.3.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/validator": "^13.12.2",
     "typescript": "^5.1.3"
   },
