--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "expo-status-bar": "~2.0.1",
     "lottie-react-native": "7.1.0",
     "react": "18.3.1",
-    "react-native": "0.76.6",
+    "react-native": "^0.76.7",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-maps": "1.18.0",
-    "react-native-paper": "^5.12.5",
+    "react-native-paper": "^5.13.1",
     "react-native-picker-select": "^9.3.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
